style: fix height and alignment  issues

--- a/src/app/pokedex/pokedex.component.scss
+++ b/src/app/pokedex/pokedex.component.scss
@@ -6,13 +6,14 @@
     width: 100%;
     box-sizing: border-box;
     background-color: #f5f5f5;
-    padding-top: 2rem;
+    padding: 2rem 1rem 1rem 1rem;
 }
 
 /* Form */
 
 .form-city {
-    padding: 2rem 1rem 1rem 1rem;
+    align-items: center;
+    display: flex;
 }
 
 .form-city .btn-search {
@@ -50,6 +51,7 @@
 .pokemon-information .pokemon-info {
     list-style: none;
     text-align: center;
+    margin-bottom: 0rem;
 }
 
 .pokemon {
@@ -137,15 +139,20 @@
         height: 5rem;
         font-size: 1.375rem;
         font-weight: bold;
+        margin-bottom: 0rem;
     }
 
     .pokemon img {
-        height: 12.5rem;
+        height: 9.375rem;
         width: auto;
     }
 }
 
 @include media-breakpoint-down(md) {
+    .pokedex-section {
+        height: 100dvh;
+    }
+
     .content {
         display: flexbox;
         justify-content: center;
@@ -155,10 +162,15 @@
     .form-city {
         width: 100%;
         text-align: center;
+        flex-direction: column;
+    }
+
+    .form-city .city-input  {
+        width: 100%;
     }
 
     .form-city .btn-search {
-        width: 10.625rem;
+        width: 100%;
         margin-top: 0.5rem;
     }
 
